feat!: upgrade Android Driver SDK to version 7.0.0 (#75)